# llmc

./: Cargo.toml  README.md
config.sample/prompts/: 00-general-ds-v3.toml  01-general-ds-r1.toml
config.sample/providers/: deepseek.sample.toml  openai.sample.toml
src/: config.rs  lib.rs  main.rs
src/profile/: config.rs  model.rs
