[package]
name = "llmc"
version = "0.1.0"
edition = "2021"
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description = "Maybe a simple chat tool for terminal users."

[dependencies]
async-openai = "0.27"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"

[[bin]]
name = "llmc"
path = "src/main.rs"
