[package]
name = "llmc"
version = "0.1.0"
edition = "2021"
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description = "Chat with LLM in your terminal"

[dependencies]
async-openai = "0.27"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["full"] }
termimad = "0.31"
thiserror = "2.0"

[[bin]]
name = "llmc"
path = "src/main.rs"
