[package]
name = "llmc"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description = "Chat with LLM in your terminal"
documentation = "https://github.com/Reverier-Xu/llmc"
repository = "https://github.com/Reverier-Xu/llmc"
homepage = "https://github.com/Reverier-Xu/llmc"
readme = "README.md"

[dependencies]
async-openai = "0.27"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["full"] }
termimad = "0.31"
anyhow = "1.0"
futures = "0.3"
shellexpand = "3.1"

[[bin]]
name = "llmc"
path = "src/main.rs"
